tcutils/kubernetes/auth/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace
  labels:
    site: test
