tcutils/kubernetes/auth/templates/nad_cirros.yaml
apiVersion: v1
kind: Pod
metadata:
  name: right-cirros-pod
  labels:
    app: webapp-sc
  annotations:
    k8s.v1.cni.cncf.io/networks: '[{ "name": "vn-right" }]'
spec:
  containers:
    - name: ubuntu-right-pod-sc
      image: cirros
