tcutils/kubernetes/auth/templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cirros-pod
spec:
  containers:
    - name: cirros
      image: cirros
