tcutils/kubernetes/auth/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-srv
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx
