tcutils/kubernetes/auth/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-svc
spec:
  backend:
    serviceName: nginx-srv
    servicePort: 80
