tcutils/kubernetes/auth/templates/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: def-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: default
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          site: test
    - podSelector:
        matchLabels:
          app: test
